<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_weekend_black_24dp"
            android:title="@string/nav_menu_information_option" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/nav_menu_news" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_near_me_black_24dp"
            android:title="@string/nav_menu_map_option" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_local_library_black_24dp"
            android:title="@string/nav_menu_history" />
        <item
            android:id="@+id/nav_fun_facts"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/nav_menu_fun_facts" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_menu_gallery" />


    </group>

</menu>
